# chalmers-qubit

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml  tox.ini
.github/workflows/: build_documentation.yml  coverage.yml  deploy_documentation.yml  documentation.yml  release.yml  tests.yml
chalmers_qubit/: __init__.py
chalmers_qubit/sarimner/: compiler.py  model.py  noise.py  processor.py
chalmers_qubit/utils/: __init__.py
chalmers_qubit/utils/randomized_benchmarking/: __init__.py  clifford_decomposition.py  clifford_group.py  generate_clifford_hash_tables.py  pauli_transfer_matrices.py  randomized_benchmarking.py
docs/: index.md  mkdocs.yml  multi_qubit_gates.md  noise.md  quantum_gates.md  reference.md  single_qubit_gates.md  transmons.md
docs/examples/: comparison_of_coherence_limits.ipynb  quantum_gates.ipynb  randomized_benchmarking.ipynb  relaxation.ipynb
docs/reference/devices/sarimner/: sarimner.md
docs/reference/utils/: gates.md  operations.md
docs/reference/utils/randomized_benchmarking/: randomized_benchmarking.md
docs/sarimner/: noise.md  quantum_gates.md  transmons.md
docs/user_guide/: noise.md  quantum_gates.md  transmons.md
examples/: comparison_of_coherence_limits.ipynb  quantum_gates.ipynb  relaxation.ipynb
examples/comparison_of_coherence_limits/: index.html
examples/quantum_gates/: index.html
examples/randomized_benchmarking/: index.html
examples/relaxation/: index.html
noise/: index.html
quantum_gates/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/devices/sarimner/compiler/: index.html
reference/devices/sarimner/model/: index.html
reference/devices/sarimner/noise/: index.html
reference/devices/sarimner/processor/: index.html
reference/utils/gates/: index.html
reference/utils/operations/: index.html
reference/utils/randomized_benchmarking/clifford_group/: index.html
reference/utils/randomized_benchmarking/pauli_transfer_matrices/: index.html
reference/utils/randomized_benchmarking/randomized_benchmarking/: index.html
reference/utils/transformation/: index.html
sarimner/noise/: index.html
sarimner/quantum_gates/: index.html
sarimner/transmons/: index.html
search/: search_index.json
tests/: test_docs_build.py  test_gates.py  test_noise.py
tests/utils/randomized_benchmarking/: test_randomized_benchmarking.py
transmons/: index.html
user_guide/noise/: index.html
user_guide/quantum_gates/: index.html
user_guide/transmons/: index.html
