[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
authors = [
  {name = "Pontus Vikstål", email = "vikstal@chalmers.se"},
  {name = "Shahnawaz Ahmed"},
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License",
]
dependencies = [
  "qutip==5.1.1",
  "qutip-qip==0.4.1",
  "qutip-qtrl==0.1.5",
  "matplotlib>=3.9.3",
]
description = "A simulator of the Chalmers device to be used with qutip-qip"
keywords = ["superconducting qubits", "pulse simulator", "quantum computing"]
license = {file = "LICENSE.txt"}
maintainers = [
  {name = "Pontus Vikstål", email = "vikstal@chalmers.se"},
]
name = "chalmers_qubit"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = "~=3.10"
version = "2.1.2"

[project.optional-dependencies]
docs = [
  "mkdocs-material",
  "mkdocstrings[python]",
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
  "mkdocs-bibtex",
  "mkdocs-jupyter",
  "black",
]

[project.urls]
Documentation = "https://aqp-mc2-chalmers.github.io/chalmers-qubit/"
Homepage = "https://github.com/aqp-mc2-chalmers/chalmers-qubit"
Repository = "https://github.com/aqp-mc2-chalmers/chalmers-qubit.git"

# Setuptools configuration to fix package discovery issues
[tool.setuptools]
include-package-data = true
packages = ["chalmers_qubit"]

# Tox configuration
[tool.tox]
env_list = ["py310"]
isolated_build = true
requires = ["tox>=4"]

[tool.tox.env_run_base]
commands = [
  ["python", "-m", "unittest", "discover", "-s", "tests"],
]
deps = [
  ".[docs]", # Install with docs dependencies for testing
]
description = "run unit tests"
